--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=BookMyShow
 # DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/BookMyShow
 spring.datasource.username=student
-spring.datasource.password=211
+spring.datasource.password=2151
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
